# ff8-triple-triad

./: .gitignore  CHANGELOG.md  ff8-cards.cabal  hie.yaml  pseudo.py
app/: Automation.hs  Data.hs  Draw.hs  Logic.hs  Main.hs  Play.hs  Types.hs
bench/: Main.hs
config/: bench.yml  game.yml
data/: cards.csv
lib/: Automation.hs  Data.hs  Draw.hs  Logic.hs  Nice.hs  Parse.hs  Play.hs  Types.hs
test/: Main.hs
