cabal-version:      3.6
name:               ff8-cards
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Elliot Marsden
maintainer:         elliot.marsden@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common common-all
    build-depends:    base ^>=4.15.0.0, containers, vector, diagrams, diagrams-lib, diagrams-svg, relude, generic-optics, optics
    default-language: Haskell2010
    default-extensions:
      ConstraintKinds
      DataKinds
      DeriveAnyClass
      DeriveFoldable
      DeriveFunctor
      DeriveGeneric
      DeriveLift
      DeriveTraversable
      DerivingStrategies
      EmptyCase
      FlexibleContexts
      FlexibleInstances
      GeneralizedNewtypeDeriving
      InstanceSigs
      LambdaCase
      MultiParamTypeClasses
      MultiWayIf
      NamedFieldPuns
      OverloadedStrings
      ScopedTypeVariables
      StandaloneDeriving
      StrictData
      TupleSections
      TypeApplications
      TypeFamilies
      TypeOperators
      ImportQualifiedPost
    mixins:              base hiding (Prelude)
                      , relude (Relude as Prelude)
                      , relude
    ghc-options: -Wall
                 -Wcompat
                 -Widentities
                 -Wincomplete-record-updates
                 -Wincomplete-uni-patterns
                 -Wpartial-fields
                 -Wredundant-constraints

common common-exec
    import:        common-all
    other-modules: Draw, Types, Logic, Automation, Data
    hs-source-dirs:   app

executable ff8-cards-dev
    import:        common-exec
    main-is:          Main.hs
    ghc-options:
      -O0

executable ff8-cards
    import:        common-exec
    main-is:          Main.hs
    ghc-options:
      -O2
      -threaded
      "-with-rtsopts=-N"

executable ff8-cards-prof
    import:        common-exec
    main-is:          Main.hs
    ghc-options:
      -O2
      -threaded
      -fprof-auto
      "-with-rtsopts=-N -p -s -h"
