cabal-version:      3.6
name:               ff8-cards
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Elliot Marsden
maintainer:         elliot.marsden@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common common-all
    build-depends:
      base ^>=4.15.0.0,
      containers,
      diagrams,
      diagrams-lib,
      diagrams-svg,
      relude,
      generic-optics,
      optics,
      mtl,
      QuickCheck

    default-language: Haskell2010
    default-extensions:
      ConstraintKinds
      DataKinds
      DeriveAnyClass
      DeriveFoldable
      DeriveFunctor
      DeriveGeneric
      DeriveLift
      DeriveTraversable
      DerivingStrategies
      EmptyCase
      FlexibleContexts
      FlexibleInstances
      GeneralizedNewtypeDeriving
      InstanceSigs
      LambdaCase
      MultiParamTypeClasses
      MultiWayIf
      NamedFieldPuns
      OverloadedLists
      OverloadedLabels
      OverloadedStrings
      ScopedTypeVariables
      StandaloneDeriving
      StrictData
      TupleSections
      TypeApplications
      TypeFamilies
      TypeOperators
      ImportQualifiedPost
    mixins:              base hiding (Prelude)
                      , relude (Relude as Prelude)
                      , relude
    ghc-options: -Wall
                 -Wcompat
                 -Widentities
                 -Wincomplete-record-updates
                 -Wincomplete-uni-patterns
                 -Wpartial-fields
                 -Wredundant-constraints

library
  import: common-all
  exposed-modules: Draw, Types, Logic, Automation, Data, Play, Nice
  build-depends: file-embed
  hs-source-dirs: lib

common common-exec
    import:        common-all
    build-depends: ff8-cards

executable unopt
    import:        common-exec
    hs-source-dirs:   app
    main-is:          Main.hs
    ghc-options:
      -O0

executable opt
    import:        common-exec
    hs-source-dirs:   app
    main-is:          Main.hs
    ghc-options:
      -O2
      -threaded
      "-with-rtsopts=-N"

executable bench
    import:        common-exec
    hs-source-dirs:   bench
    main-is:          Main.hs
    ghc-options:
      -O2
      -threaded
      -fprof-auto
      "-with-rtsopts=-N -p -s -h"
